update for lession 4

--- a/Homework/Lession4/ex1.html
+++ b/Homework/Lession4/ex1.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -8,7 +8,7 @@
     </title>
     <link
       rel="shortcut icon"
-      href="http://leospaw.com/cdn/shop/files/Logo_1x1_2_32x32.png?v=1614751875"
+      href="https://leospaw.com/cdn/shop/files/Logo_1x1_2_32x32.png?v=1614751875"
       type="img/png"
     />
     <link rel="stylesheet" href="style.css" />
