--- a/Lession5/index.html
+++ b/Lession5/index.html
@@ -28,12 +28,12 @@
           </a>
         </div>
         <nav class="nav flex align-items-center">
-          <a href="/work.html" class="nav-link lexend">Work</a>
-          <a href="/articles.html" class="nav-link lexend"
+          <a href="../work.html" class="nav-link lexend">Work</a>
+          <a href="../articles.html" class="nav-link lexend"
             >Articles</a
           >
           <a
-            href="/contact.html"
+            href="../contact.html"
             class="nav-link nav-link--button lexend"
             >Say Hello</a
           >
@@ -61,7 +61,7 @@
               </div>
               <div class="section-content flex">
                   <div class="project-card">
-                      <a href="/work/hooten-hooten-case-study.html">
+                      <a href="../work/hooten-hooten-case-study.html">
                         <div class="project-thumbnail">
                             <img src="https://framerusercontent.com/images/YlUgRlD4P699J8fqnjzSoI1T2Y.jpg?scale-down-to=4096" alt="Hootën & Hootën Case Study">
                         </div>
@@ -145,9 +145,9 @@
         </p>
         <nav class="nav flex">
           <a href="/" class="nav-link lexend lexend--400">Home</a>
-          <a href="/work.html" class="nav-link lexend lexend--400 ">Work</a>
-          <a href="/articles.html" class="nav-link lexend lexend--400 ">Articles</a>
-          <a href="/contact.html" class="nav-link lexend lexend--400 ">Say Hello</a>
+          <a href="../work.html" class="nav-link lexend lexend--400 ">Work</a>
+          <a href="../articles.html" class="nav-link lexend lexend--400 ">Articles</a>
+          <a href="../contact.html" class="nav-link lexend lexend--400 ">Say Hello</a>
         </nav>
       </div>
     </footer>
