--- a/Lession5/work/hooten-hooten-case-study.html
+++ b/Lession5/work/hooten-hooten-case-study.html
@@ -28,12 +28,12 @@
           </a>
         </div>
         <nav class="nav flex align-items-center">
-          <a href="/work.html" class="nav-link lexend">Work</a>
-          <a href="/articles.html" class="nav-link lexend"
+          <a href="../work.html" class="nav-link lexend">Work</a>
+          <a href="../articles.html" class="nav-link lexend"
             >Articles</a
           >
           <a
-            href="/contact.html"
+            href="../contact.html"
             class="nav-link nav-link--button lexend"
             >Say Hello</a
           >
@@ -78,9 +78,9 @@
         </p>
         <nav class="nav flex">
           <a href="/" class="nav-link lexend lexend--400">Home</a>
-          <a href="/work.html" class="nav-link lexend lexend--400 ">Work</a>
-          <a href="/articles.html" class="nav-link lexend lexend--400 ">Articles</a>
-          <a href="/contact.html" class="nav-link lexend lexend--400 ">Say Hello</a>
+          <a href="../work.html" class="nav-link lexend lexend--400 ">Work</a>
+          <a href="../articles.html" class="nav-link lexend lexend--400 ">Articles</a>
+          <a href="../contact.html" class="nav-link lexend lexend--400 ">Say Hello</a>
         </nav>
       </div>
     </footer>
