--- a/Lession5/work.html
+++ b/Lession5/work.html
@@ -20,7 +20,7 @@
     <header class="header">
       <div class="container container--header flex justify-content-between align-items-center">
         <div class="logo">
-          <a href="/">
+          <a href="Techmaster/Lession5">
             <img
               src="https://framerusercontent.com/images/B7vY6Im7QUay3t3jaIv5UDuTeI.png"
               alt="Hanna"
@@ -28,12 +28,12 @@
           </a>
         </div>
         <nav class="nav flex align-items-center">
-          <a href="../work.html" class="nav-link lexend">Work</a>
-          <a href="../articles.html" class="nav-link lexend"
+          <a href="Techmaster/Lession5/work.html" class="nav-link lexend">Work</a>
+          <a href="Techmaster/Lession5/articles.html" class="nav-link lexend"
             >Articles</a
           >
           <a
-            href="../contact.html"
+            href="Techmaster/Lession5/contact.html"
             class="nav-link nav-link--button lexend"
             >Say Hello</a
           >
@@ -97,10 +97,10 @@
           ©2023 Hanna. All rights reserved. A Template by <a href="https://heyframer.com/" class="template-link">Hey Framer</a>.
         </p>
         <nav class="nav flex">
-          <a href="/" class="nav-link lexend lexend--400">Home</a>
-          <a href="../work.html" class="nav-link lexend lexend--400 ">Work</a>
-          <a href="../articles.html" class="nav-link lexend lexend--400 ">Articles</a>
-          <a href="../contact.html" class="nav-link lexend lexend--400 ">Say Hello</a>
+          <a href="Techmaster/Lession5" class="nav-link lexend lexend--400">Home</a>
+          <a href="Techmaster/Lession5/work.html" class="nav-link lexend lexend--400 ">Work</a>
+          <a href="Techmaster/Lession5/articles.html" class="nav-link lexend lexend--400 ">Articles</a>
+          <a href="Techmaster/Lession5/contact.html" class="nav-link lexend lexend--400 ">Say Hello</a>
         </nav>
       </div>
     </footer>
