--- a/Lession5/index.html
+++ b/Lession5/index.html
@@ -61,7 +61,7 @@
               </div>
               <div class="section-content flex">
                   <div class="project-card">
-                      <a href="../work/hooten-hooten-case-study.html">
+                      <a href="Techmaster/Lession5/work/hooten-hooten-case-study.html">
                         <div class="project-thumbnail">
                             <img src="https://framerusercontent.com/images/YlUgRlD4P699J8fqnjzSoI1T2Y.jpg?scale-down-to=4096" alt="Hootën & Hootën Case Study">
                         </div>
