--- a/Lession5/index.html
+++ b/Lession5/index.html
@@ -20,7 +20,7 @@
     <header class="header">
       <div class="container container--header flex justify-content-between align-items-center">
         <div class="logo">
-          <a href="Techmaster/Lession5">
+          <a href="/">
             <img
               src="https://framerusercontent.com/images/B7vY6Im7QUay3t3jaIv5UDuTeI.png"
               alt="Hanna"
@@ -28,12 +28,12 @@
           </a>
         </div>
         <nav class="nav flex align-items-center">
-          <a href="Techmaster/Lession5/work.html" class="nav-link lexend">Work</a>
+          <a href="../work.html" class="nav-link lexend">Work</a>
           <a href="../articles.html" class="nav-link lexend"
             >Articles</a
           >
           <a
-            href="Techmaster/Lession5/contact.html"
+            href="../contact.html"
             class="nav-link nav-link--button lexend"
             >Say Hello</a
           >
@@ -61,7 +61,7 @@
               </div>
               <div class="section-content flex">
                   <div class="project-card">
-                      <a href="Techmaster/Lession5/work/hooten-hooten-case-study.html">
+                      <a href="../work/hooten-hooten-case-study.html">
                         <div class="project-thumbnail">
                             <img src="https://framerusercontent.com/images/YlUgRlD4P699J8fqnjzSoI1T2Y.jpg?scale-down-to=4096" alt="Hootën & Hootën Case Study">
                         </div>
@@ -144,10 +144,10 @@
           ©2023 Hanna. All rights reserved. A Template by <a href="https://heyframer.com/" class="template-link">Hey Framer</a>.
         </p>
         <nav class="nav flex">
-          <a href="Techmaster/Lession5" class="nav-link lexend lexend--400">Home</a>
-          <a href="Techmaster/Lession5/work.html" class="nav-link lexend lexend--400 ">Work</a>
-          <a href="Techmaster/Lession5/articles.html" class="nav-link lexend lexend--400 ">Articles</a>
-          <a href="Techmaster/Lession5/contact.html" class="nav-link lexend lexend--400 ">Say Hello</a>
+          <a href="/" class="nav-link lexend lexend--400">Home</a>
+          <a href="../work.html" class="nav-link lexend lexend--400 ">Work</a>
+          <a href="../articles.html" class="nav-link lexend lexend--400 ">Articles</a>
+          <a href="../contact.html" class="nav-link lexend lexend--400 ">Say Hello</a>
         </nav>
       </div>
     </footer>
