--- a/Lession5/contact.html
+++ b/Lession5/contact.html
@@ -20,7 +20,7 @@
     <header class="header">
       <div class="container container--header flex justify-content-between align-items-center">
         <div class="logo">
-          <a href="/">
+          <a href="index.html">
             <img
               src="https://framerusercontent.com/images/B7vY6Im7QUay3t3jaIv5UDuTeI.png"
               alt="Hanna"
@@ -77,7 +77,7 @@
           ©2023 Hanna. All rights reserved. A Template by <a href="https://heyframer.com/" class="template-link">Hey Framer</a>.
         </p>
         <nav class="nav flex">
-          <a href="/" class="nav-link lexend lexend--400">Home</a>
+          <a href="index.html" class="nav-link lexend lexend--400">Home</a>
           <a href="work.html" class="nav-link lexend lexend--400 ">Work</a>
           <a href="articles.html" class="nav-link lexend lexend--400 ">Articles</a>
           <a href="contact.html" class="nav-link lexend lexend--400 ">Say Hello</a>
