update css final

--- a/Lession6/index.html
+++ b/Lession6/index.html
@@ -123,7 +123,7 @@
           class="section-link nunito nunito--400"
           href="https://vuighe2.com/tap-moi-nhat"
         >
-          <h1 class="section-title nunito nunito--400">Tập Mới Nhất</h1>
+          <h1 class="section-title nunito nunito--400">TẬP MỚI NHẤT/h1>
         </a>
 
         <div class="list-card flex flex-column flex-wrap">
@@ -353,7 +353,7 @@
           class="section-link nunito nunito--400"
           href="https://vuighe2.com/tap-moi-nhat"
         >
-          <h1 class="section-title nunito nunito--400">Bộ Sưu Tập</h1>
+          <h1 class="section-title nunito nunito--400">BỘ SƯU TẬP</h1>
         </a>
 
         <div class="list-album grid">
@@ -437,7 +437,7 @@
           class="section-link nunito nunito--400"
           href="https://vuighe2.com/bang-xep-hang"
         >
-          <h1 class="section-title nunito nunito--400">Bảng Xếp Hạng</h1>
+          <h1 class="section-title nunito nunito--400">BẢNG XẾP HẠNG</h1>
         </a>
 
         <div class="list-album grid">
@@ -729,7 +729,7 @@
           class="section-link nunito nunito--400"
           href="https://vuighe2.com/tap-moi-nhat"
         >
-          <h1 class="section-title nunito nunito--400">HÔM NAY XEM GÌ</h1>
+          <h1 class="section-title nunito nunito--400">TẤT CẢ ANIME</h1>
         </a>
 
         <div class="list-anime grid gap-12">
