--- a/Lession6/index.html
+++ b/Lession6/index.html
@@ -3,8 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>CSS Possion</title>
+    <title>Vui Ghê Anime Vietsub Online</title>
     <link rel="stylesheet" href="styles.css" />
+    <link rel="shortcut icon" href="https://vuighe2.com/favicon.ico" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
