--- a/MidleExam/index.html
+++ b/MidleExam/index.html
@@ -22,17 +22,19 @@
       <div
         class="container container--header flex justify-content-between align-items-center"
       >
-        <div class="header-logo flex align-items-center">
-          <div class="header-icon">
-            <img
-              src="https://uploads-ssl.webflow.com/5fa25266badbdb239c79ef86/60baff5fcc93ec0fda8a19ba_s%20logo%20copy%203.png"
-              alt=""
-              class="icon"
-            />
-            <div class="header-icon-hover"></div>
+        <a href="#" class="home-page">
+          <div class="header-logo flex align-items-center">
+            <div class="header-icon">
+              <img
+                src="https://uploads-ssl.webflow.com/5fa25266badbdb239c79ef86/60baff5fcc93ec0fda8a19ba_s%20logo%20copy%203.png"
+                alt=""
+                class="icon"
+              />
+              <div class="header-icon-hover"></div>
+            </div>
+            <h1 class="header-title poppins-500">Sebastian Petravic</h1>
           </div>
-          <h1 class="header-title poppins-500">Sebastian Petravic</h1>
-        </div>
+        </a>
         <nav class="nav">
           <div
             class="header-item flex justify-content-between align-items-center"
